test/errors/error11.base
The type 'array(tuple(int, int), 1)' of variable 'x' is not supported. Arrays can only contain basic types.
fun foo() {
   val x = [(0,1)];
       ^
